--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
   font-size: 16px;
   font-weight: 500;
   color: #ffffff;
-  padding: 10px 35px;
+  padding: 6px 40px;
   border-radius: 3px;
   border: none;
+  cursor: pointer;
   background-color: #111b47;
   transition: 0.3s;
 }
@@ -16,20 +17,109 @@
   font-size: 16px;
   font-weight: 500;
   color: #111b47;
-  padding: 10px 35px;
+  padding: 5px 40px;
   border-radius: 3px;
   border: 2px solid #111b47;
+  cursor: pointer;
   background-color: transparent;
-  transition: 0.3s;
-}
-.outline-button:hover {
-  color: #ffffff;
-  background-color: #111b47;
 }
 
 .line {
   height: 1px;
   background-color: #cdd1d4;
+}
+
+.main-title {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 48px;
+  color: #091133;
+}
+
+.main-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #6f7cb2;
+  margin-block: 16px 40px;
+}
+
+.header__navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__navbar .navbar__items {
+  display: flex;
+  gap: 60px;
+}
+.header__navbar .navbar__items .navbar__link {
+  font-size: 15px;
+  color: #505f98;
+}
+
+.header {
+  padding-top: 12px;
+  background-image: url("/assets/images/hero-img.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: cover cover;
+  height: 110vh;
+}
+
+.hero {
+  margin-top: 200px;
+  max-width: 539px;
+}
+.hero .hero__title {
+  font-size: 50px;
+  font-weight: 500;
+  color: #091133;
+}
+.hero .hero__text {
+  font-size: 18px;
+  line-height: 30px;
+  color: #505f98;
+  margin-block: 20px 70px;
+}
+.hero .hero__buttons {
+  display: flex;
+  gap: 30px;
+}
+
+.intro {
+  padding-block: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+.intro .intro__info {
+  margin-top: 80px;
+  display: flex;
+  gap: 30px;
+}
+.intro .info__wrapper {
+  max-width: 255px;
+}
+.intro .info__title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #091133;
+  margin-block: 12px;
+}
+.intro .info__text {
+  font-size: 12px;
+  color: #5d6970;
+}
+
+.info {
+  padding-block: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.info .info__content {
+  max-width: 445px;
 }
 
 .container {
