change hero img url

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding-top: 12px;
-  background-image: url("./assets/images/hero-img.png");
+  background-image: url("/landing/assets/images/hero-img.png");
   background-repeat: no-repeat;
   background-position: top right;
   background-size: cover cover;
