change img urls

--- a/sass/layout/_pricing.scss
+++ b/sass/layout/_pricing.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("../assets/images/bg-rectangle.png");
+  background-image: url("/assets/images/bg-rectangle.png");
   background-repeat: no-repeat;
   background-size: cover;
   @include media(992) {
