--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@
 
 .header {
   padding-top: 12px;
-  background-image: url("../assets/images/hero-img.png");
+  background-image: url("/assets/images/hero-img.png");
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
@@ -221,7 +221,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("../assets/images/bg-rectangle.png");
+  background-image: url("/assets/images/bg-rectangle.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
